<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
	    <TextView android:id="@+id/txt_loginname"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_username"/>

	    <EditText android:id="@+id/edi_loginname"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="true"/>

	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
	    <TextView android:id="@+id/txt_logintishi1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
	</LinearLayout>

	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
	    <TextView android:id="@+id/txt_loginpass"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_pass"/>

	    <EditText android:id="@+id/edi_loginpass"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        android:password="true"/>

	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_margin="5dp">
	    <TextView android:id="@+id/txt_logintishi2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
	    <TextView android:id="@+id/txt_logintishi3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/forgetpass"/>
	</LinearLayout>
    <LinearLayout android:id="@+id/lin_nconter"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
		<Button android:id="@+id/btn_logincancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/btn_cancel"/>
		<Button android:id="@+id/btn_loginsure"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/btn_sure"/>

	</LinearLayout>
</LinearLayout>