<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
	    <TextView android:id="@+id/txt_gmail"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_gmail"/>

	    <EditText android:id="@+id/edi_gmail"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="true"/>

	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
	    <TextView android:id="@+id/txt_gmailhint"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
	</LinearLayout>
    <LinearLayout android:id="@+id/lin_nconter"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
		<Button android:id="@+id/btn_forgetcancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/btn_cancel"/>
		<Button android:id="@+id/btn_passsure"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/btn_sure"/>

	</LinearLayout>
</LinearLayout>