<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
	    <TextView android:id="@+id/txt_updatename"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_username"/>

	    <EditText android:id="@+id/edi_updatename"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="true"/>

	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
	    <TextView android:id="@+id/txt_userhint1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
	    <TextView android:id="@+id/txt_oldpwd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_oldpwd"/>

	    <EditText android:id="@+id/edi_oldpwd"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        android:password="true"/>

	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
	    <TextView android:id="@+id/txt_userhint2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
	    <TextView android:id="@+id/txt_newpwd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_newpwd"/>

	    <EditText android:id="@+id/edi_newpwd"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        android:password="true"/>

	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
	    <TextView android:id="@+id/txt_userhint3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
	    <TextView android:id="@+id/txt_okpwd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/txt_okpwd"/>

	    <EditText android:id="@+id/edi_okpwd"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:singleLine="true"
	        android:password="true"/>

	</LinearLayout>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
	    <TextView android:id="@+id/txt_userhint4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
	</LinearLayout>
    <LinearLayout android:id="@+id/lin_nconter"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_margin="5dp">
		<Button android:id="@+id/btn_sure"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/btn_sure"
		    />
		<Button android:id="@+id/btn_cancel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/btn_cancel"/>
	</LinearLayout>
</LinearLayout>